SconsX 0.4.6:
  * Improve Visual C++ 2005 support by embedding generated manifest into dll/prog.
  * Add 'num_jobs' options support

SconsX 0.4.5:
  * Local tool can be created into project/sconsx_ext/

SconsX 0.4.2:
  * Add egglib tool to retrieve binary egg compilation info (include and lib).
  * Modify qt4, qhull, boost, bison, flex tools to work with eggs.
  * Minor bug fix (qt4)


SconsX 0.4.0:
 * Improve qt support
 * Improve Mingw support
 * Change default build_prefix
 * Fix some bug with scons 0.97


SConsX 0.3.0:
 * Add ALEAGlob and ALEAGlobDir methods to the environment.
   For instance, cpp files can be found by env.ALEAGlob('*.cpp',dir='.')
   
 * Enhance default settings on Windows and Linux mainly for qt and OpenGL.
 * Improve windows support, mainly for Visual C++ 2005.
 
 SConsX 0.2.0:
 * Add high-level functions such as:
   + ALEALibrary, ALEAProgram and ALEAIncludes that build and install 
     stuff independently of the platform.
  * Add support for MinGW and Visual on Windows.